data/derived/sp14/progs/unify/prog0993.ml.out
Characters 46-68:
  wwhile ((if f b = b then (true, failwith "asd") else failwith "asd") ,b);;
                           ^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
